Fixed missing links and incomplete paper title

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,9 +14,8 @@
             <h1 class="site-title"><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
             <nav class="site-nav">
                 <a href="{{ '/' | relative_url }}">Overview</a>
-                <a href="{{ '/higher-resolution-hypothesis' | relative_url }}">Paper</a>
+                <a href="{{ '/hrh-paper' | relative_url }}">Paper</a>
                 <a href="{{ '/about' | relative_url }}">About</a>
-                <a href="{{ '/faq' | relative_url }}">FAQ</a>
             </nav>
         </div>
     </header>
